<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/payment_layout"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/black"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
          />


    <RelativeLayout
        android:id="@+id/booking_window"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="#FFFFFF">


        <TextView
            android:id="@+id/text_booking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/text_booking"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_booking"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/edit_username"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_carplate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/edit_carplate"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/text_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_carplate"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/edit_phone"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/text_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_phone"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/edit_phone"
            android:textSize="18sp" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_timestamp"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:background="@color/colorAccent"
            android:text="@string/btn_pay"
            android:textColor="@color/colorWhite"
            android:onClick="showPaymentWindow"/>


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/payment_window"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_below="@+id/app_toolbar"
        android:background="@color/colorWhite"
        android:visibility="gone"
        android:elevation="20dp"
        >

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_close"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            android:onClick="closePaymentWindow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_fee"
            android:text="@string/edit_username"
            android:layout_below="@+id/btn_close"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_fee_dates"
            android:text="@string/edit_username"
            android:layout_below="@+id/text_fee"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp"
            />




        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_fee_dates"
            android:textColor="@color/colorWhite"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_confirm"
            android:background="@color/colorWhite"
            android:layout_marginBottom="35dp"
            android:onClick="processPayment"

            />


    </RelativeLayout>






</RelativeLayout>